<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragmentAdmin.PerfilAdminFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/seccion_perfil_admin"
            android:textStyle="bold"
            android:textColor="@color/teal_700"
            android:layout_marginTop="8dp"
            android:textSize="20sp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iV_foto_perfil"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            app:srcCompat="@drawable/perfil"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/RoundedImageViewRounded"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/darker_gray_line"
            android:layout_marginTop="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/mi_informacion"
            android:textStyle="bold"
            android:textColor="@color/teal_700"
            android:textSize="20sp" />



        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tV_uid_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/uid_perfil"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tV_uid_perfil1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/uid_perfil_"
                android:textSize="14sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tV_nombre_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_perfil"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tV_nombre_perfil1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/nombre_perfil_"
                android:textSize="14sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tV_apellidos_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apellidos_perfil"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tV_apellidos_perfil1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/apellidos_perfil_"
                android:textSize="14sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tV_correo_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo_perfil"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tV_correo_perfil1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/correo_perfil_"
                android:textSize="14sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tV_pass_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass_perfil"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tV_pass_perfil1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/actualizar_pass_perfil_"
                android:textSize="14sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tV_edad_perfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/edad_perfil"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tV_edad_perfil1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/edad_perfil_"
                android:textSize="14sp" />


        </androidx.appcompat.widget.LinearLayoutCompat>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/darker_gray_line"
            android:layout_marginTop="16dp"/>




        <Button
            android:id="@+id/btn_actualizar_pass"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_personalizado_2"
            android:drawableStart="@drawable/ic_edit"
            android:drawablePadding="16dp"
            android:padding="12dp"
            android:text="@string/actualizar_pass_perfil"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_actualizar_datos"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/btn_personalizado_2"
            android:drawableStart="@drawable/ic_edit"
            android:drawablePadding="16dp"
            android:padding="12dp"
            android:text="@string/actualizar_datos"
            android:textColor="@color/white" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>