<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentAdmin.activity.CambioPasswordActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mis_credenciales"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <!--Contraseña traida de Firebase -->

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tV_pass_actual"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tV_password_actual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass_actual"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginStart="4dp"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/eT_password_actual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/eT_pass_actual"
                android:inputType="textPassword"
                android:autofillHints="no" />



        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/eT_password_nuevo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_pass_nuevo"
                android:inputType="textPassword"
                 />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_cambiar_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_personalizado_2"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:text="@string/btn_cambiar_pass"
            />

        <Button
            android:id="@+id/btn_ir_a_inicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_personalizado_2"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:text="@string/btn_ir_inicio"
            />




    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>